<resources>
    <string name="app_name">sqlIUDV</string>
    <string name="enter_new_entry_below">Enter new entry below…</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
</resources>